# ncnn-android-scrfd

./: DATABASE_README.md  LICENSE  README.md  generate_database.py  generate_from_npz.py  local.properties  requirements.txt
app/: Enco.jks  build.gradle
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/enco/shark/scrfdncnn/: MainActivity.java  OverlayView.java  SCRFDNcnn.java
app/src/main/java/com/tencent/scrfdncnn/: MainActivity.java  OverlayView.java  SCRFDNcnn.java
app/src/main/jni/: CMakeLists.txt  recognizer.cpp  recognizer.h  scrfd.cpp  scrfdncnn.cpp
app/src/main/res/layout/: main.xml
gradle/wrapper/: gradle-wrapper.properties
